<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Travery</string>
    <string name="all_setting">설정</string>
    <string name="all_cancel">취소</string>
    <string name="all_ignore">무시하기</string>
    <string name="all_delete">삭제</string>
    <string name="all_save">저장</string>
    <string name="all_hold">보류</string>

    <string name="server_client_id">S4nXU-nm85oA2iLq9Ghn7BbS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">테스트 메뉴입니다.</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="notification_channel_id">TraveryServiceChannel</string>
    <string name="notification_channel_name">Travery Service Channel</string>

    <string name="permission_title">권한 요청</string>
    <string name="permission_message">사용자의 위치를 가져오기 위하여 권한이 필요합니다.</string>
    <string name="permission_message_select_image">카메라 또는 앨범에 접근하려면 권한이 필요합니다.</string>
    <string name="permission_denied">"권한이 없으면 제대로 동작하지 않습니다!\n"</string>

    <string name="permission_dialog_gps_title">위치 서비스 비활성화</string>
    <string name="permission_dialog_gps_description">앱을 사용하기 위해서는 위치 서비스가 필요합니다.\n위치 설정을 수정하실래요?
    </string>

    <string name="string_delete_useraction">해당 활동을 삭제하시겠습니까?</string>

    <string name="suggestion_dialog_title">활동 추가 제안</string>
    <string name="suggestion_dialog_description">확인하지 않은 활동 추가 제안이 남아 있습니다. 제안을 무시하고 저장하시겠습니까?
    </string>

    <string name="string_write_useraction">활동 작성</string>

    <string name="service_title">Travery Service</string>
    <string name="service_message">활동을 기록하고 있습니다.</string>

    <string name="string_et_course_add_hint">제목(최대 20자)</string>
    <string name="string_et_course_add_content_hint">현재 코스를 한줄로 표현한다면?</string>
    <string name="string_et_course_add_theme">테마를 입력하세요</string>
    <string name="string_tv_course_add">테마</string>
    <string name="string_tv_date">날짜</string>
    <string name="string_save_menu">저장</string>
    <string name="string_edit_menu">수정</string>
    <string name="string_delete_menu">삭제</string>
    <string name="string_input_theme">직접 입력</string>

    <string name="string_et_content_hint">내용을 입력하세요\n\n\n\n</string>
    <string name="string_tv_useraction_hashtag">해시태그</string>
    <string name="string_tv_location">위치</string>
    <string name="string_tv_image">사진</string>
    <string name="string_sign_nick_name">닉네임(최대 20자)</string>

    <string name="string_mapservice_gps">GPS 신호를 받는 중입니다...</string>
    <string name="string_mapservice_start">버튼을 눌러 기록을 시작하세요!</string>
    <string name="string_mapservice_gps_error">GPS 신호를 수신할 때까지 기다려 주세요!</string>

    <string name="string_setting_user">계정</string>
    <string name="string_setting_login">로그인</string>
    <string name="string_setting_logout">로그아웃</string>
    <string name="string_setting_sign">가입하기</string>
    <string name="string_setting_request_login">로그인을 해주세요.</string>
    <string name="string_setting_auto_upload">활동 자동 공유</string>
    <string name="string_setting_version">버전</string>
    <string name="string_setting_about">앱에 관하여</string>

    <string-array name="theme_array">
        <item>데이트코스</item>
        <item>산책</item>
        <item>반려동물 산책코스</item>
        <item>관광지</item>
        <item>직접 입력</item>
    </string-array>

    <string name="string_place_holder_date">%s ~ %s</string>

    <string name="progress_bar_message">잠시만 기다려주세요</string>
    <string name="string_tv_progress">Loading...</string>
    <string name="string_save_course_error">활동 시간이 좀 더 길어야 합니다. 기록을 취소하시겠습니까?</string>
    <string name="string_et_useraction_hashtag">해시태그를 입력하세요</string>

    <string name="string_group_title_today">오늘</string>
    <string name="string_group_title_yesterday">어제</string>
    <string name="string_zero">0</string>

    <string name="string_useraction_search_hint">관심있는 활동 검색</string>

    <string name="action_search">검색</string>
    <string name="action_edit">수정</string>
    <string name="string_temp_useraction_detail_location">서울시 강남구 역삼동 1234</string>

    <string name="string_folder_title">Folder</string>

    <string name="base_image_url">http://35.229.76.14/uploads/</string>
    <string name="string_tv_share">공유하기</string>
    <string name="string_activity_sign_toolbar">가입</string>
    <string name="string_activity_setting_toolbar">설정</string>
    <string name="string_activity_save_useraction_toolbar">활동 추가</string>
    <string name="string_activity_edit_useraction_toolbar">활동 수정</string>
    <string name="string_activity_save_course_toolbar">경로 추가</string>
    <string name="string_tracking_initial_distance">0m</string>

    <string name="dialog_message">기록을 종료하시겠습니까?</string>
    <string name="dialog_positive">예</string>
    <string name="dialog_negative">아니오</string>

    <string name="string_activity_title_action_detail">활동 상세보기</string>

    <string name="dialog_message_delete">정말 삭제하시겠습니까?</string>
    <string name="string_activity_user_action_save_success">활동 기록이 완료되었습니다!</string>
    <string name="string_activity_course_save_success">코스 기록이 완료되었습니다!</string>

    <string name="string_activity_find_location_title">현재 위치가 표시됩니다</string>

    <string name="string_dialog_message_select_location">선택한 위치를 추가하시겠습니까?</string>
    <string name="string_toast_error_message_useraction_save">위치가 없어 저장되지 않았습니다.</string>
    <string name="string_toast_warning_message_location_select">기록중에는 위치를 수정할 수 없습니다.</string>
    <string name="string_activity_user_action_save">위치를 선택해주세요.</string>
    <string name="string_empty_list_guide">경로가 아직 하나도 없네요ㅠㅠ</string>
</resources>
