<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:textColor="@color/ef_white"
            android:id="@+id/footer_delete_button"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:background="@drawable/suggest_btn"
            android:text="@string/all_delete"
            android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/ef_white"
            android:id="@+id/footer_save_button"
            android:layout_width="0dp"
            android:gravity="top|center"
            android:background="@drawable/suggest_btn"
            android:text="@string/all_save"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/ef_white"
            android:id="@+id/footer_cancel_button"
            android:layout_width="0dp"
            android:gravity="top|center"
            android:background="@drawable/suggest_btn"
            android:text="@string/all_hold"
            android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>
