<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.boostcamp.travery.community.SettingViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".community.SettingActivity">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/string_setting_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolBar"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/setting_content"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@{viewModel.userName}"
            android:textColor="@color/normal_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/user_tab"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@{viewModel.loginBtnString}"
            app:chipBackgroundColor="@color/ef_white"
            app:chipStrokeColor="@color/colorPrimaryDark"
            app:chipStrokeWidth="1dp"
            android:onClick="@{(view) -> viewModel.logout()}"
            app:layout_constraintBottom_toBottomOf="@id/tv_user"
            app:layout_constraintEnd_toEndOf="@id/tv_user"
            app:layout_constraintTop_toTopOf="@+id/tv_user"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/setting_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/all_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_auto"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/setting_content"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@string/string_setting_auto_upload"
            android:textColor="@color/normal_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/setting_user"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChanged(checked)}"
            android:checked="@{viewModel.autoUploadState}"
            app:layout_constraintBottom_toBottomOf="@id/tv_auto"
            app:layout_constraintEnd_toEndOf="@id/tv_auto"
            app:layout_constraintTop_toTopOf="@+id/tv_auto"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tab_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/string_setting_about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_auto"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@drawable/setting_content"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@string/string_setting_version"
            android:textColor="@color/normal_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/about_app"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@{viewModel.appVersion}"
            app:layout_constraintBottom_toBottomOf="@id/tv_version"
            app:layout_constraintEnd_toEndOf="@id/tv_version"
            app:layout_constraintTop_toTopOf="@+id/tv_version"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>